# ParallelMulticlassBlueNoise

./: .gitignore  CMakeLists.txt  README.md
RainbowNoiseLibrary/: Grid.cpp  Grid.hpp  Math.cpp  Math.hpp  Timer.cpp  Timer.hpp
RainbowNoiseSpectrum/: CMakeLists.txt
scripts/: performance_test.sh
shaders/: image.frag  point.frag  point.vert
src/: DartThrowing.cpp  ExperimentalDartThrowing.cpp  Main.cpp  ParallelDartThrowing.cpp  PointSet.cpp  PointSet.h  SFT.cpp  Shader.h  SpectrumImage.cpp  SpectrumImage.h
src/imgui/: imgui.cpp  imgui_impl_glfw_gl3.cpp
testdata/: pointset1.txt  pointset2.txt  pointset3.txt  spectrum.txt  spectrum0.txt  spectrum1.txt  spectrum2.txt
